Fix gap in safari

--- a/style.css
+++ b/style.css
@@ -33,12 +33,16 @@ img {
   flex: 0 0 100vw;
 
   display: flex;
-  gap: 10%;
   justify-content: center;
   padding: 5% 10%;
 }
 
 #s2 img:first-child {
   justify-self: end;
+  padding-right: 5%;
+}
+
+#s2 img:last-child {
+  padding-left: 10%;
 }
 
